# open_vins

./: CMakeLists.txt  config_params.h  open_vins_library.cpp
ov_core/: CMakeLists.txt
ov_core/src/feat/: FeatureDatabase.h
ov_core/src/init/: InertialInitializer.cpp  InertialInitializer.h
ov_core/src/sim/: BsplineSE3.cpp  BsplineSE3.h  Simulator.cpp  Simulator.h
ov_core/src/track/: TrackBase.h  TrackDescriptor.cpp  TrackKLT.cpp  TrackSIM.h
ov_core/src/utils/: dataset_reader.h  quat_ops.h
ov_eval/: CMakeLists.txt
ov_msckf/: CMakeLists.txt
ov_msckf/src/: ros_subscribe_msckf.cpp  run_no_ros.cpp
ov_msckf/src/core/: RosVisualizer.cpp  RosVisualizer.h  VioManager.cpp  VioManager.h  VioManagerOptions.h
ov_msckf/src/sim/: Simulator.cpp
ov_msckf/src/state/: Propagator.cpp  Propagator.h  State.cpp  State.h  StateOptions.h
ov_msckf/src/update/: UpdaterHelper.h  UpdaterMSCKF.cpp  UpdaterMSCKF.h  UpdaterSLAM.cpp  UpdaterSLAM.h
ov_msckf/src/utils/: parse_cmd.h  parse_ros.h
